Made accordion module accessible.

--- a/css/cagov.core.css
+++ b/css/cagov.core.css
@@ -1,5 +1,5 @@
 /**
- * CA State Template v5 -  @version v5.0.5 -  3/29/2019 
+ * CA State Template v5 -  @version v5.0.5 -  4/2/2019 
   STYLES COMPILED FROM SOURCE (SCSS) DO NOT MODIFY */
 /* -----------------------------------------
    BOOTSTRAP v4.3.1 - /source/scss/bootstrap/ 
@@ -15923,6 +15923,14 @@ body {
 
 .accordion .panel-heading .panel-title a.collapsed:after, .panel-group .panel-heading .panel-title a.collapsed:after, .service-tile-content .panel-heading .panel-title a.collapsed:after {
   content: "\45";
+}
+
+.accordion .panel {
+  overflow: visible;
+}
+
+.accordion .panel a:focus {
+  outline: dotted 1px #000;
 }
 
 /* list accordion */
