--- a/source/scss/variables.scss
+++ b/source/scss/variables.scss
@@ -9,11 +9,11 @@
 
 $brand-primary:         #046B99;
 $brand-highlight:       #FDB81E;
-$brand-success:         #72ce6f;
+$brand-success: #32852E;
 // @brand-info:         #02BFE7;
 $brand-info: 			#1C7DB5;
-$brand-warning:         #F27e31;
-$brand-danger:          #d34a37;
+$brand-warning: #C2570F;
+$brand-danger: #D24532;
 
 // == Social Media Brand Colors
 $share-facebook:    #3c5a99;
