Fixed forms page accessibility errors

--- a/css/cagov.core.css
+++ b/css/cagov.core.css
@@ -17382,6 +17382,10 @@ input[type="checkbox"]:focus + .btn, input[type="radio"]:focus + .btn {
   border-radius: 0;
 }
 
+.valid-feedback {
+  color: #32852E;
+}
+
 /* -----------------------------------------
    PUBLICATIONS /source/scss/cagov/publications.scss
 ----------------------------------------- */
