--- a/css/cagov.core.css
+++ b/css/cagov.core.css
@@ -1,5 +1,5 @@
 /**
- * CA State Template v5 -  @version v5.0.5 -  4/2/2019 
+ * CA State Template v5 -  @version v5.0.5 -  4/4/2019 
   STYLES COMPILED FROM SOURCE (SCSS) DO NOT MODIFY */
 /* -----------------------------------------
    BOOTSTRAP v4.3.1 - /source/scss/bootstrap/ 
@@ -15759,7 +15759,7 @@ body {
   border: 1px solid #dee2e6;
 }
 
-@media (max-width: 991px) {
+@media (max-width: 767px) {
   .tab-group {
     border: none;
   }
@@ -15788,10 +15788,11 @@ body {
   display: block;
 }
 
-.tab-group .nav-tabs li > a, .tab-group .nav-tabs li > a:hover, .tab-group .nav-tabs li > a:focus {
+.tab-group .nav-tabs li > a, .tab-group .nav-tabs li > a:hover {
   border: 1px solid #f5f5f5;
   border-top: none !important;
   text-decoration: none;
+  border-bottom: 1px solid #dee2e6;
 }
 
 .tab-group .tab-pane {
@@ -15845,14 +15846,6 @@ body {
   }
 }
 
-.nav-tabs > li > a.active, .nav-tabs > li > a.active:hover, .nav-tabs > li > a.active:focus {
-  color: #555555;
-  background-color: #fff;
-  border: 1px solid #ddd;
-  border-bottom-color: transparent;
-  cursor: default;
-}
-
 .nav-tabs > li {
   margin-bottom: -1px;
   margin-left: 1px;
@@ -15862,8 +15855,29 @@ body {
   margin-left: 0;
 }
 
+.nav-tabs > li > a.active, .nav-tabs > li > a.active:hover {
+  color: #555555;
+  background-color: #fff;
+  border: 1px solid #ddd;
+  border-bottom-color: transparent;
+  cursor: default;
+  border-bottom: 1px solid #fff;
+}
+
+.nav-tabs > li > a:hover {
+  color: #555555;
+}
+
+.nav-tabs > li > a.active:focus {
+  outline: solid 2px #2ea3f2 !important;
+}
+
 .nav-tabs .nav-item {
-  margin-left: 1px;
+  margin-left: 2px;
+}
+
+.nav-tabs .nav-item:hover {
+  background-color: transparent;
 }
 
 .nav-tabs .nav-item:first-child {
@@ -15872,6 +15886,37 @@ body {
 
 .nav-tabs .nav-item::after {
   display: none;
+}
+
+/* Responsive tabs*/
+.responsive .nav-tabs {
+  display: none;
+}
+
+@media (min-width: 768px) {
+  .responsive .nav-tabs {
+    display: flex;
+  }
+  .responsive.tab-group .card {
+    border: none;
+    padding: 0;
+    margin-bottom: 0;
+    background-color: transparent;
+  }
+  .responsive.tab-group .card .card-header {
+    display: none;
+  }
+  .responsive.tab-group .card .collapse {
+    display: block;
+  }
+}
+
+@media (max-width: 767px) {
+  .responsive .tab-pane {
+    display: block !important;
+    opacity: 1 !important;
+    padding: 0 !important;
+  }
 }
 
 /* -----------------------------------------
