Updated test accesnt colors to meet accessibility contrast ratio requirements

--- a/source/scss/cagov/globals.scss
+++ b/source/scss/cagov/globals.scss
@@ -98,6 +98,10 @@
 .color-gray-dark {color: $text-color;}
 .color-gray {color: $gray;}
 .bg-primary-hover:hover {background-color: $color-p2;}
+.text-primary {color: $text-primary !important;}
+.text-success {color: $text-success !important;}
+.text-info {color: $text-info !important;}
+.text-muted {color: $text-muted !important;}
 
 // light backgrounds
 .bg-grey-light {
