--- a/source/scss/colorscheme/colorscheme-oceanside.scss
+++ b/source/scss/colorscheme/colorscheme-oceanside.scss
@@ -23,15 +23,15 @@ $color-s2:              #9FDBF1;            // Lighter Blue
 $color-s3:              #50aee4;        	// Light Blue $brand-info
 
 // Accent Colors
-$color-a1:              #1f89db;            // Dark Blue
-$color-a2:              #49bbf8;            // Med Blue
-$color-a3:              #35bbaa;            // Teal
-$color-a4:              #72ce6f;     		// Green $brand-success
-$color-a5:              #815ab4;            // Purple
-$color-a6:              #dd99e5;            // Lavender
-$color-a7:              #d34a37;      		// Red $brand-danger
-$color-a8:              #F27e31;     		// Orange $brand-warning
-$color-a9:              #f7e455;            // Yellow
+$color-a1: #1B79C0; // Dark Blue
+$color-a2: #077CBB; // Med Blue
+$color-a3: #258378; // Teal
+$color-a4: #32852E; // Green $brand-success
+$color-a5: #815ab4; // Purple
+$color-a6: #BE37CD; // Lavender
+$color-a7: #C93E2C; // Red $brand-danger
+$color-a8: #BB520C; // Orange $brand-warning
+$color-a9: #f7e455; // Yellow
 
 $panel-border:        #ddd;
 
