--- a/css/cagov.core.css
+++ b/css/cagov.core.css
@@ -12462,7 +12462,7 @@ table.gsc-search-box td {
 }
 
 .google_url {
-  color: #6c757d;
+  color: #687178;
 }
 
 .google_result_thumbnail {
@@ -17920,7 +17920,7 @@ input[type="checkbox"]:focus + .btn, input[type="radio"]:focus + .btn {
   font-family: 'CaGov';
   font-size: 32px;
   font-size: 2rem;
-  color: #1f89db;
+  color: #1B79C0;
   top: 50%;
 }
 
@@ -18162,7 +18162,7 @@ input[type="checkbox"]:focus + .btn, input[type="radio"]:focus + .btn {
 
 .bg-blue-gradient {
   background-repeat: repeat-x;
-  background-image: linear-gradient(225deg, #1f89db, #046B99);
+  background-image: linear-gradient(225deg, #1B79C0, #046B99);
 }
 
 .icon-block {
@@ -20565,6 +20565,22 @@ a.label-dark:focus, a.label-dark.focus {
 
 .bg-primary-hover:hover {
   background-color: #046B99;
+}
+
+.text-primary {
+  color: #006CE0 !important;
+}
+
+.text-success {
+  color: #1F7F35 !important;
+}
+
+.text-info {
+  color: #117888 !important;
+}
+
+.text-muted {
+  color: #687178 !important;
 }
 
 .bg-grey-light {
