Fixed mobile navigation icon links page accessibility errors

--- a/source/scss/cagov/global-header.scss
+++ b/source/scss/cagov/global-header.scss
@@ -48,7 +48,7 @@
 
         // Hide mobile controls in desktop view
         .mobile-controls {
-            display: none;                  // Javascript also uses this style to detect if page is in mobile view
+            display: none !important;                  // Javascript also uses this style to detect if page is in mobile view
         }
     }
 }
