--- a/css/cagov.core.css
+++ b/css/cagov.core.css
@@ -1,5 +1,5 @@
 /**
- * CA State Template v5 -  @version v5.0.5 -  4/4/2019 
+ * CA State Template v5 -  @version v5.0.5 -  4/5/2019 
   STYLES COMPILED FROM SOURCE (SCSS) DO NOT MODIFY */
 /* -----------------------------------------
    BOOTSTRAP v4.3.1 - /source/scss/bootstrap/ 
@@ -11315,7 +11315,7 @@ code {
 
 @media (min-width: 768px) {
   .global-header .mobile-controls {
-    display: none;
+    display: none !important;
   }
 }
 
