Fixed ca-gov-icon-cloud-gear icon

--- a/css/cagov.core.css
+++ b/css/cagov.core.css
@@ -1,5 +1,5 @@
 /**
- * CA State Template v5 -  @version v5.0.5 -  4/5/2019 
+ * CA State Template v5 -  @version v5.0.5 -  4/8/2019 
   STYLES COMPILED FROM SOURCE (SCSS) DO NOT MODIFY */
 /* -----------------------------------------
    BOOTSTRAP v4.3.1 - /source/scss/bootstrap/ 
@@ -9443,21 +9443,8 @@ li[class^="et_fb_profile_banner"]::before {
   content: "\e916";
 }
 
-.ca-gov-icon-cloud-gear .path1:before {
+.ca-gov-icon-cloud-gear:before {
   content: "\e917";
-  color: black;
-}
-
-.ca-gov-icon-cloud-gear .path2:before {
-  content: "\e918";
-  margin-left: -1em;
-  color: #010002;
-}
-
-.ca-gov-icon-cloud-gear .path3:before {
-  content: "\e919";
-  margin-left: -1em;
-  color: black;
 }
 
 .ca-gov-icon-cloud-services:before {
