--- a/source/scss/cagov/icon-font.scss
+++ b/source/scss/cagov/icon-font.scss
@@ -87,21 +87,8 @@ li[class^="et_fb_profile_banner"]::before {
     content: "\e916";
 }
 
-.ca-gov-icon-cloud-gear .path1:before {
+.ca-gov-icon-cloud-gear:before {
     content: "\e917";
-    color: rgb(0, 0, 0);
-}
-
-.ca-gov-icon-cloud-gear .path2:before {
-    content: "\e918";
-    margin-left: -1em;
-    color: rgb(1, 0, 2);
-}
-
-.ca-gov-icon-cloud-gear .path3:before {
-    content: "\e919";
-    margin-left: -1em;
-    color: rgb(0, 0, 0);
 }
 
 .ca-gov-icon-cloud-services:before {
