Made accordion module accessible.

--- a/source/scss/cagov/accordion.scss
+++ b/source/scss/cagov/accordion.scss
@@ -49,6 +49,19 @@
     }
 }
 
+
+.accordion {
+    .panel {
+        overflow: visible; // to display focus outline for accessibility
+        a {
+            &:focus {
+                @include outline(2px);
+            }
+        }
+    }
+}
+
+
 /* list accordion */
 .accordion-list {
 	list-style: none;
