--- a/css/cagov.core.css
+++ b/css/cagov.core.css
@@ -1,5 +1,5 @@
 /**
- * CA State Template v5.5 -  @version v5.5.2 -  3/28/2019 
+ * CA State Template v5.5 -  @version v5.5.2 -  4/10/2019 
   STYLES COMPILED FROM SOURCE (SCSS) DO NOT MODIFY */
 /* -----------------------------------------
    BOOTSTRAP v4.3.1 - /source/scss/bootstrap/ 
@@ -16354,6 +16354,14 @@ body {
 
 .accordion .panel-heading .panel-title a.collapsed:after, .panel-group .panel-heading .panel-title a.collapsed:after, .service-tile-content .panel-heading .panel-title a.collapsed:after {
   content: "\45";
+}
+
+.accordion .panel {
+  overflow: visible;
+}
+
+.accordion .panel a:focus {
+  outline: solid 2px #2ea3f2;
 }
 
 /* list accordion */
