--- a/css/cagov.core.css
+++ b/css/cagov.core.css
@@ -17451,15 +17451,15 @@ label, .form-control-label {
 }
 
 .input-group-text.is-valid {
-  color: #72ce6f;
-  border-color: #72ce6f;
-  background-color: #d7f1d6;
+  color: #32852E;
+  border-color: #32852E;
+  background-color: #74cd6f;
 }
 
 .input-group-text.is-invalid {
-  color: #d34a37;
-  border-color: #d34a37;
-  background-color: #f8e1de;
+  color: #D24532;
+  border-color: #D24532;
+  background-color: #f7ddd9;
 }
 
 .custom-file-label:after {
@@ -17476,7 +17476,7 @@ label, .form-control-label {
 }
 
 .required-label {
-  color: #d34a37;
+  color: #D24532;
 }
 
 .form-inline-columns .form-group {
@@ -17524,31 +17524,31 @@ label, .form-control-label {
 }
 
 .has-error .feedback {
-  color: #cd412d;
+  color: #c93f2c;
 }
 
 .has-error .input-group-addon {
-  color: #d34a37;
-  border-color: #d34a37;
-  background-color: #f8e1de;
+  color: #D24532;
+  border-color: #D24532;
+  background-color: #f7ddd9;
 }
 
 .has-error .form-control {
-  border-color: #d34a37;
+  border-color: #D24532;
 }
 
 .has-success .feedback {
-  color: #3eac3a;
+  color: #1a4518;
 }
 
 .has-success .input-group-addon {
-  color: #72ce6f;
-  border-color: #72ce6f;
-  background-color: #d7f1d6;
+  color: #32852E;
+  border-color: #32852E;
+  background-color: #74cd6f;
 }
 
 .has-success .form-control {
-  border-color: #72ce6f;
+  border-color: #32852E;
 }
 
 .file-attach input[type="file"] {
@@ -21226,12 +21226,12 @@ a.label-dark:focus, a.label-dark.focus {
 
 .bg-danger-warning-gradient {
   background-repeat: repeat-x;
-  background-image: linear-gradient(225deg, #F27e31, #d34a37);
+  background-image: linear-gradient(225deg, #C2570F, #D24532);
 }
 
 .bg-info-success-gradient {
   background-repeat: repeat-x;
-  background-image: linear-gradient(225deg, #1C7DB5, #72ce6f);
+  background-image: linear-gradient(225deg, #1C7DB5, #32852E);
 }
 
 /* Radial Gradients */
