Fixed forms page siteimprove accessibility errors

--- a/css/cagov.core.css
+++ b/css/cagov.core.css
@@ -1,5 +1,5 @@
 /**
- * CA State Template v5.5 -  @version v5.5.2 -  4/10/2019 
+ * CA State Template v5.5 -  @version v5.5.2 -  4/11/2019 
   STYLES COMPILED FROM SOURCE (SCSS) DO NOT MODIFY */
 /* -----------------------------------------
    BOOTSTRAP v4.3.1 - /source/scss/bootstrap/ 
@@ -9287,11 +9287,11 @@ a:focus {
 }
 
 .alert-danger {
-  color: #d2322d;
+  color: #721c24;
 }
 
 .alert-danger:hover {
-  color: #a82824;
+  color: #491217;
 }
 
 /* -----------------------------------------
@@ -17756,6 +17756,10 @@ input[type="checkbox"]:focus + .btn, input[type="radio"]:focus + .btn {
 .custom-checkbox .custom-control-input:checked ~ .custom-control-label::before {
   background-color: #046B99;
   border-radius: 0;
+}
+
+.valid-feedback {
+  color: #32852E;
 }
 
 /* -----------------------------------------
