--- a/source/scss/cagov/forms.scss
+++ b/source/scss/cagov/forms.scss
@@ -332,6 +332,8 @@ input[type="checkbox"]:focus + .btn, input[type="radio"]:focus + .btn {
   		@include gradient-bg($color-p2);
 		border-radius: $border-radius-base;
 	}
-} 
+}
 
-
+.valid-feedback {
+    color: $brand-success;
+}
