Fixed accessibility errors in icons fonts page.

--- a/css/cagov.font-only.css
+++ b/css/cagov.font-only.css
@@ -1,5 +1,5 @@
 /**
- * CA State Template v5.5 -  @version v5.5.2 -  3/28/2019 
+ * CA State Template v5.5 -  @version v5.5.2 -  4/11/2019 
   STYLES COMPILED FROM SOURCE (SCSS) DO NOT MODIFY */
 /* -----------------------------------------
    ICON FONTS - /source/scss/cagov/icon-font.scss
@@ -89,21 +89,8 @@ li[class^="et_fb_profile_banner"]::before {
   content: "\e916";
 }
 
-.ca-gov-icon-cloud-gear .path1:before {
+.ca-gov-icon-cloud-gear:before {
   content: "\e917";
-  color: black;
-}
-
-.ca-gov-icon-cloud-gear .path2:before {
-  content: "\e918";
-  margin-left: -1em;
-  color: #010002;
-}
-
-.ca-gov-icon-cloud-gear .path3:before {
-  content: "\e919";
-  margin-left: -1em;
-  color: black;
 }
 
 .ca-gov-icon-cloud-services:before {
