--- a/css/cagov.core.css
+++ b/css/cagov.core.css
@@ -9443,21 +9443,8 @@ li[class^="et_fb_profile_banner"]::before {
   content: "\e916";
 }
 
-.ca-gov-icon-cloud-gear .path1:before {
+.ca-gov-icon-cloud-gear:before {
   content: "\e917";
-  color: black;
-}
-
-.ca-gov-icon-cloud-gear .path2:before {
-  content: "\e918";
-  margin-left: -1em;
-  color: #010002;
-}
-
-.ca-gov-icon-cloud-gear .path3:before {
-  content: "\e919";
-  margin-left: -1em;
-  color: black;
 }
 
 .ca-gov-icon-cloud-services:before {
