Fixed text accent page siteimprove accessibility errors

--- a/css/cagov.core.css
+++ b/css/cagov.core.css
@@ -18239,7 +18239,7 @@ input[type="checkbox"]:focus + .btn, input[type="radio"]:focus + .btn {
   font-family: 'CaGov';
   font-size: 32px;
   font-size: 2rem;
-  color: #1f89db;
+  color: #1B79C0;
   top: 50%;
 }
 
@@ -18456,7 +18456,7 @@ input[type="checkbox"]:focus + .btn, input[type="radio"]:focus + .btn {
 
 .bg-blue-gradient {
   background-repeat: repeat-x;
-  background-image: linear-gradient(225deg, #1f89db, #046B99);
+  background-image: linear-gradient(225deg, #1B79C0, #046B99);
 }
 
 .icon-block {
@@ -21441,6 +21441,22 @@ a.label-dark:focus, a.label-dark.focus {
 
 .color-gray {
   color: #555555;
+}
+
+.text-primary {
+  color: #006CE0 !important;
+}
+
+.text-success {
+  color: #1F7F35 !important;
+}
+
+.text-info {
+  color: #117888 !important;
+}
+
+.text-muted {
+  color: #555555 !important;
 }
 
 .bg-primary-hover:hover {
