--- a/source/scss/variables.scss
+++ b/source/scss/variables.scss
@@ -58,6 +58,11 @@ $gray-lighter: lighten($gray-base, 84%) !default; // #eee
 $gray-lightest: lighten($gray-base, 96%); // #f5f5f5
 $white: #fff;
 
+$text-primary: #006CE0;
+$text-success: #1F7F35;
+$text-info: #117888;
+$text-muted: $gray;
+
 
 //== Scaffolding
 //
