--- a/css/colorscheme-sierra.css
+++ b/css/colorscheme-sierra.css
@@ -1,5 +1,5 @@
 /**
- * CA State Template v5.5 -  @version v5.5.2 -  3/28/2019 
+ * CA State Template v5.5 -  @version v5.5.2 -  4/11/2019 
   STYLES COMPILED FROM SOURCE (SCSS) DO NOT MODIFY */
 /* -----------------------------------------
    SIERRA
@@ -848,7 +848,7 @@ figure {
 }
 
 .section-danger, .card-danger {
-  background: #d34a37;
+  background: #D24532;
   color: #000000;
 }
 
@@ -1093,7 +1093,7 @@ a.text-white:not(.btn):hover {
 
 /* Accent Colors */
 .progress-bar-accent1 {
-  background-color: #1f89db;
+  background-color: #1B79C0;
 }
 
 .progress-striped .progress-bar-accent1 {
@@ -1101,7 +1101,7 @@ a.text-white:not(.btn):hover {
 }
 
 .progress-bar-accent1 {
-  background-color: #1f89db;
+  background-color: #1B79C0;
 }
 
 .progress-striped .progress-bar-accent1 {
@@ -1109,7 +1109,7 @@ a.text-white:not(.btn):hover {
 }
 
 .progress-bar-accent2 {
-  background-color: #49bbf8;
+  background-color: #077CBB;
 }
 
 .progress-striped .progress-bar-accent2 {
@@ -1117,7 +1117,7 @@ a.text-white:not(.btn):hover {
 }
 
 .progress-bar-accent3 {
-  background-color: #35bbaa;
+  background-color: #258378;
 }
 
 .progress-striped .progress-bar-accent3 {
@@ -1125,7 +1125,7 @@ a.text-white:not(.btn):hover {
 }
 
 .progress-bar-accent4 {
-  background-color: #72ce6f;
+  background-color: #32852E;
 }
 
 .progress-striped .progress-bar-accent4 {
@@ -1141,7 +1141,7 @@ a.text-white:not(.btn):hover {
 }
 
 .progress-bar-accent6 {
-  background-color: #dd99e5;
+  background-color: #BE37CD;
 }
 
 .progress-striped .progress-bar-accent6 {
@@ -1149,7 +1149,7 @@ a.text-white:not(.btn):hover {
 }
 
 .progress-bar-accent7 {
-  background-color: #d34a37;
+  background-color: #C93E2C;
 }
 
 .progress-striped .progress-bar-accent7 {
@@ -1157,7 +1157,7 @@ a.text-white:not(.btn):hover {
 }
 
 .progress-bar-accent8 {
-  background-color: #F27e31;
+  background-color: #BB520C;
 }
 
 .progress-striped .progress-bar-accent8 {
@@ -1380,7 +1380,7 @@ a.text-white:not(.btn):hover {
 }
 
 .testimonial-danger {
-  background: #d34a37;
+  background: #D24532;
   color: #000000;
 }
 
@@ -1515,9 +1515,9 @@ a.text-white:not(.btn):hover {
 }
 
 .card-success {
-  background-color: #72ce6f;
-  border-color: #72ce6f;
-  color: #000000;
+  background-color: #32852E;
+  border-color: #32852E;
+  color: #ffffff;
 }
 
 .card-success a:not(.btn) {
@@ -1551,13 +1551,13 @@ a.text-white:not(.btn):hover {
 }
 
 .card-success .card-header {
-  border-bottom: 1px solid #72ce6f;
-  background-color: #5fc85c;
+  border-bottom: 1px solid #32852E;
+  background-color: #2b7227;
 }
 
 .card-success .card-footer {
-  border-top: 1px solid #72ce6f;
-  background-color: #5fc85c;
+  border-top: 1px solid #32852E;
+  background-color: #2b7227;
 }
 
 .card-info {
@@ -1607,9 +1607,9 @@ a.text-white:not(.btn):hover {
 }
 
 .card-warning {
-  background-color: #F27e31;
-  border-color: #F27e31;
-  color: #000000;
+  background-color: #C2570F;
+  border-color: #C2570F;
+  color: #ffffff;
 }
 
 .card-warning a:not(.btn) {
@@ -1643,18 +1643,18 @@ a.text-white:not(.btn):hover {
 }
 
 .card-warning .card-header {
-  border-bottom: 1px solid #F27e31;
-  background-color: #f06f19;
+  border-bottom: 1px solid #C2570F;
+  background-color: #aa4c0d;
 }
 
 .card-warning .card-footer {
-  border-top: 1px solid #F27e31;
-  background-color: #f06f19;
+  border-top: 1px solid #C2570F;
+  background-color: #aa4c0d;
 }
 
 .card-danger {
-  background-color: #d34a37;
-  border-color: #d34a37;
+  background-color: #D24532;
+  border-color: #D24532;
   color: #000000;
 }
 
@@ -1689,13 +1689,13 @@ a.text-white:not(.btn):hover {
 }
 
 .card-danger .card-header {
-  border-bottom: 1px solid #d34a37;
-  background-color: #c53e2b;
+  border-bottom: 1px solid #D24532;
+  background-color: #c03c2a;
 }
 
 .card-danger .card-footer {
-  border-top: 1px solid #d34a37;
-  background-color: #c53e2b;
+  border-top: 1px solid #D24532;
+  background-color: #c03c2a;
 }
 
 .card-inverse .card-header, .card-inverted .card-header {
@@ -2109,19 +2109,19 @@ a.text-white:not(.btn):hover {
    /source/scss/colorscheme/cs-text-accent.scss
 ----------------------------------------- */
 .text-accent1 {
-  color: #1f89db;
+  color: #1B79C0;
 }
 
 .text-accent2 {
-  color: #49bbf8;
+  color: #077CBB;
 }
 
 .text-accent3 {
-  color: #35bbaa;
+  color: #258378;
 }
 
 .text-accent4 {
-  color: #72ce6f;
+  color: #32852E;
 }
 
 .text-accent5 {
@@ -2129,15 +2129,15 @@ a.text-white:not(.btn):hover {
 }
 
 .text-accent6 {
-  color: #dd99e5;
+  color: #BE37CD;
 }
 
 .text-accent7 {
-  color: #d34a37;
+  color: #C93E2C;
 }
 
 .text-accent8 {
-  color: #F27e31;
+  color: #BB520C;
 }
 
 .text-accent9 {
