--- a/source/scss/cagov/globals.scss
+++ b/source/scss/cagov/globals.scss
@@ -88,6 +88,11 @@
 .color-primary-hover:hover {color: $color-p2;}
 .color-gray-dark {color: $text-color;}
 .color-gray {color: $gray;}
+.text-primary {color: $text-primary !important;}
+.text-success {color: $text-success !important;}
+.text-info {color: $text-info !important;}
+.text-muted {color: $text-muted !important;}
+
 .bg-primary-hover:hover {background-color: $color-p2;}
 
 // light backgrounds
