Fixed service profile page accessibility issues

--- a/css/cagov.core.css
+++ b/css/cagov.core.css
@@ -1,5 +1,5 @@
 /**
- * CA State Template v5 -  @version v5.0.6 -  4/8/2019 
+ * CA State Template v5 -  @version v5.0.6 -  4/11/2019 
   STYLES COMPILED FROM SOURCE (SCSS) DO NOT MODIFY */
 /* -----------------------------------------
    BOOTSTRAP v4.3.1 - /source/scss/bootstrap/ 
@@ -19454,7 +19454,7 @@ fieldset[disabled] .btn-more {
 
 .carousel .owl-dots .owl-dot.active span,
 .carousel .owl-dots .owl-dot:hover span {
-  background: #869791;
+  background: #FDB81E;
 }
 
 /* end theme */
