--- a/source/scss/cagov/carousel.scss
+++ b/source/scss/cagov/carousel.scss
@@ -69,7 +69,7 @@
 
 .carousel .owl-dots .owl-dot.active span,
 .carousel .owl-dots .owl-dot:hover span {
-    background: #869791;
+    background: $brand-highlight;
 }
 /* end theme */
 /* owl-inline-nav class positions previous and next buttons inline with the carousel */
@@ -624,5 +624,5 @@
 // Video
 
 .owl-video-wrapper .item-overlay {
-    display:none;
+    display: none;
 }
