--- a/css/cagov.core.css
+++ b/css/cagov.core.css
@@ -13501,7 +13501,7 @@ a.second-level-link [class^="ca-gov-icon-"] {
 }
 
 .utility-header a:hover, .utility-header a:focus, .utility-header a.hovered {
-  color: #fee09c;
+  color: #FEF1D2;
   text-decoration: none;
 }
 
