--- a/source/scss/cagov/global-header.scss
+++ b/source/scss/cagov/global-header.scss
@@ -35,24 +35,22 @@
     }
 }
 
-.global-header {                 // Extends bootstrap .container class to .global-header
-    position: relative;                      // Allows children to be absolute positioned within .global-header
-	z-index:1;
+.global-header { // Extends bootstrap .container class to .global-header
+    position: relative; // Allows children to be absolute positioned within .global-header
+    z-index: 1;
     padding: 0;
     background: $white;
     width: auto;
-	-webkit-box-shadow: 0px 0px 15px 0px rgba(189,189,189,0.4);	// Beta 6.0 addition
-	-moz-box-shadow: 0px 0px 15px 0px rgba(189,189,189,0.4); 	// Beta 6.0 addition
-	box-shadow: 0px 0px 15px 0px rgba(189,189,189,0.4); 	// Beta 6.0 addition
-
+    -webkit-box-shadow: 0px 0px 15px 0px rgba(189,189,189,0.4); // Beta 6.0 addition
+    -moz-box-shadow: 0px 0px 15px 0px rgba(189,189,189,0.4); // Beta 6.0 addition
+    box-shadow: 0px 0px 15px 0px rgba(189,189,189,0.4); // Beta 6.0 addition
     @media (min-width: $screen-sm-min) {
         .primary & {
             // min-height: 412px;              // 390px + line-height;
         }
-
         // Hide mobile controls in desktop view
         .mobile-controls {
-            display: none;                  // Javascript also uses this style to detect if page is in mobile view
+            display: none !important; // Javascript also uses this style to detect if page is in mobile view
         }
     }
 }
@@ -76,7 +74,6 @@
         line-height: 82px; // Beta 6.0 addition
         -webkit-transition: all 0.3s;
         transition: all 0.3s; // Smooth transition for compact header
-
         @media (max-width: $screen-xs-max) {
             max-width: 400px;
         }
@@ -86,9 +83,8 @@
             max-width: 300px;
             max-height: 70px;
             object-fit: contain !important;
+            object-position: left;
 
-            object-position:left;
-            
             @media (max-width: $screen-md) and (min-width: $screen-sm-min) { // Beta 5.0 addition
                 max-width: 225px;
             }
@@ -109,60 +105,59 @@
 }
 
 
-    //
-    // MOBILE
-    // --------------------------------------------------
-    .mobile-controls toggle-menu {
-        position: absolute;
-        top: 5px;
-        right: 10px; // Beta 5.0 addition
-        left: auto; // Beta 5.0 addition
-    }
+//
+// MOBILE
+// --------------------------------------------------
+.mobile-controls toggle-menu {
+    position: absolute;
+    top: 5px;
+    right: 10px; // Beta 5.0 addition
+    left: auto; // Beta 5.0 addition
+}
 
-    .mobile-controls toggle-search {
-        position: absolute;
-        top: 5px;
-        right: 0;
-    }
-    // Banner Carousel Styles
-    @media (min-width: $screen-sm-min) {
-        .header-slideshow-banner.enabled {
-            display: block;
-        }
-    }
-
-    .header-single-banner, .header-large-banner, .header-primary-banner {
-        width: 100%;
-        /* Will be overriden with js */
-        height: auto;
-        overflow: hidden;
-        background-position: center;
-        background-size: cover;
+.mobile-controls toggle-search {
+    position: absolute;
+    top: 5px;
+    right: 0;
+}
+// Banner Carousel Styles
+@media (min-width: $screen-sm-min) {
+    .header-slideshow-banner.enabled {
         display: block;
-        /* Preserve aspect ratio */
-        min-width: 100%;
-        min-height: 100%
     }
+}
 
-    .header-slideshow-banner {
-        position: absolute;
-        top: 0;
-        height: 100%;
-        width: 100%;
-        overflow: hidden;
+.header-single-banner, .header-large-banner, .header-primary-banner {
+    width: 100%;
+    /* Will be overriden with js */
+    height: auto;
+    overflow: hidden;
+    background-position: center;
+    background-size: cover;
+    display: block;
+    /* Preserve aspect ratio */
+    min-width: 100%;
+    min-height: 100%
+}
+
+.header-slideshow-banner {
+    position: absolute;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
+}
+
+.fixed {
+    & + .header-single-banner, & + .header-large-banner, & + .header-primary-banner {
+        margin-top: 120px;
     }
+}
 
-    .fixed {
-        & + .header-single-banner, & + .header-large-banner, & + .header-primary-banner {
-            margin-top:120px;
-        }
-    }
-
-    .carousel-banner,
-    .carousel-banner .owl-stage-outer,
-    .carousel-banner .owl-stage,
-    .carousel-banner .owl-item,
-    .carousel-banner .slide {
-        height: 100%;
-    }		
-
+.carousel-banner,
+.carousel-banner .owl-stage-outer,
+.carousel-banner .owl-stage,
+.carousel-banner .owl-item,
+.carousel-banner .slide {
+    height: 100%;
+}
