Fixed color scheme pages accessibility errors

--- a/css/cagov.core.css
+++ b/css/cagov.core.css
@@ -13638,7 +13638,7 @@ a.second-level-link [class^="ca-gov-icon-"] {
 }
 
 .utility-header a:hover, .utility-header a:focus, .utility-header a.hovered {
-  color: #fee09c;
+  color: #fff0cf;
   text-decoration: none;
 }
 
