Fixed general landing page accessibility errors

--- a/css/cagov.core.css
+++ b/css/cagov.core.css
@@ -20067,7 +20067,7 @@ div[data-state="open"] .title {
 
 .carousel .owl-dots .owl-dot.active span,
 .carousel .owl-dots .owl-dot:hover span {
-  background: #CBD2CF;
+  background: #FDB81E;
 }
 
 /* end theme */
