Updated location widgets page

--- a/css/cagov.core.css
+++ b/css/cagov.core.css
@@ -17800,7 +17800,7 @@ input[type="checkbox"]:focus + .btn, input[type="radio"]:focus + .btn {
 .location .contact [class^="ca-gov-icon"] {
   font-size: 24px;
   font-size: 1.5rem;
-  position: absolute;
+  position: relative;
   color: #555555;
 }
 
