--- a/source/scss/cagov/grid.scss
+++ b/source/scss/cagov/grid.scss
@@ -8,18 +8,17 @@
 
 /* .container custom width  */
 
-@media (min-width: $screen-lg-min) {
-  .container {
-    max-width: $container-large-desktop;
-  }
+
+.container {
+    @include container;
 }
 
+
 .group {
-    @include make-row();            // Self clearing row container same as bootstraps .row
-	
+    @include make-row(); // Self clearing row container same as bootstraps .row
     @media (max-width: $screen-xs-max) {
         //@include make-row(0);       // Remove negative margins for mobile
-	}
+    }
 }
 
 .full-width {
@@ -28,11 +27,11 @@
 
 .half {
     //@include make-sm-column(6);     // 50% wide columns same as bootstraps .col-sm-6
-    @include make-sm-column(6);     // Equivelent to .col-md-6
+    @include make-sm-column(6); // Equivelent to .col-md-6
 }
 
 .third {
-    @include make-sm-column(4);     // Only specifying medium size grid. Small will collapse to single column only
+    @include make-sm-column(4); // Only specifying medium size grid. Small will collapse to single column only
 }
 
 .two-thirds {
@@ -83,7 +82,7 @@
 
 .main-secondary .group {
     padding: 0 8px 0 8px;
-    
+
     .half {
         padding: 0 7px 0 7px;
     }
@@ -96,10 +95,10 @@
 // --------------------------------------------------
 
 .grid-demo {
-    margin-bottom:($line-height-computed / 2);
-    
+    margin-bottom: ($line-height-computed / 2);
+
     div {
-        border:1px solid $gray-light;
+        border: 1px solid $gray-light;
     }
 }
 
@@ -108,7 +107,6 @@
 //
 
 .main-content > .section,
-.two-column .main-content > .section,
-.global-header {
-	@include container;
-	}
+.two-column .main-content > .section {
+    @include container;
+}
