--- a/source/scss/variables.scss
+++ b/source/scss/variables.scss
@@ -368,29 +368,42 @@ $screen-tablet: $screen-sm-min !default;
 
 // Medium screen / desktop
 // Deprecated `$screen-md` as of v3.0.1
-$screen-md: 992px !default;
-$screen-md-min: $screen-md !default;
+$screen-md: 992px !global;
+$screen-md-min: $screen-md !global;
 // Deprecated `$screen-desktop` as of v3.0.1
-$screen-desktop: $screen-md-min !default;
+$screen-desktop: $screen-md-min !global;
 
 // Large screen / wide desktop
 // Deprecated `$screen-lg` as of v3.0.1
-$screen-lg: 1200px !default;
-$screen-lg-min: $screen-lg !default;
+$screen-lg: 1200px !global;
+$screen-lg-min: $screen-lg !global;
 // Deprecated `$screen-lg-desktop` as of v3.0.1
-$screen-lg-desktop: $screen-lg-min !default;
+$screen-lg-desktop: $screen-lg-min !global;
+
+
+
+$screen-xl: 1280px !global;
+$screen-xl-min: $screen-xl !global;
+$screen-xl-desktop: $screen-xl-min !global;
+
+
+
+
+
 
 // So media queries don't overlap when required, provide a maximum
 $screen-xxs-max: ($screen-xs-min - 1) !default; // 575px
 $screen-xs-max: ($screen-sm-min - 1) !default; // 767px
-$screen-sm-max: ($screen-md-min - 1) !default; // 991px
-$screen-md-max: ($screen-lg-min - 1) !default; // 1199px
+$screen-sm-max: ($screen-md-min - 1) !global; // 991px
+$screen-md-max: ($screen-lg-min - 1) !global; // 1139px
+$screen-lg-max: ($screen-xl-min - 1) !global; // 1279px
 
 // Bootstrap4 breakpoints
 $breakpoint-xm: 540px;
 $breakpoint-sm: 720px;
 $breakpoint-md: 960px;
-$breakpoint-lg: 1200px;
+$breakpoint-lg: 1140px;
+$breakpoint-xl: 1280px;
 
 
 
@@ -419,14 +432,14 @@ $container-tablet: (720px + $grid-gutter-width) !default;
 $container-sm: $container-tablet !default;
 
 // Medium screen / desktop
-$container-desktop: (940px + $grid-gutter-width) !default;
+$container-desktop: (962px + $grid-gutter-width) !default;
 // For `$screen-md-min` and up.
 $container-md: $container-desktop !default;
 
 // Large screen / wide desktop
-$container-large-desktop: (1170px + $grid-gutter-width) !default;
+$container-large-desktop: (1250px + $grid-gutter-width) !global;
 // For `$screen-lg-min` and up.
-$container-lg: $container-large-desktop !default;
+$container-lg: $container-large-desktop !global;
 
 
 //== Navbar
