Removed nowrap property form main navigation links, adjusted its height property

--- a/css/cagov.core.css
+++ b/css/cagov.core.css
@@ -1,5 +1,5 @@
 /**
- * CA State Template v5 -  @version v5.0.6 -  4/11/2019 
+ * CA State Template v5 -  @version v5.0.6 -  4/29/2019 
   STYLES COMPILED FROM SOURCE (SCSS) DO NOT MODIFY */
 /* -----------------------------------------
    BOOTSTRAP v4.3.1 - /source/scss/bootstrap/ 
@@ -12548,7 +12548,6 @@ table.gsc-search-box td {
 .first-level-link {
   display: block;
   padding: 12px 0;
-  white-space: nowrap;
 }
 
 .first-level-link:hover, .first-level-link:focus {
@@ -12614,6 +12613,7 @@ table.gsc-search-box td {
   .top-level-nav .nav-item > a {
     text-align: center;
     min-height: 50px;
+    height: calc(100% - 5px);
   }
   .top-level-nav .main-navigation.dropdown .nav-arrow-down {
     left: auto;
