--- a/source/scss/cagov/carousel.scss
+++ b/source/scss/cagov/carousel.scss
@@ -628,7 +628,13 @@
 .owl-carousel:focus {
     outline:none;
 }
+.owl-carousel .owl-nav button.owl-prev:focus {
+    margin-left: 3em;
+}
 
+.owl-carousel .owl-nav button.owl-next:focus {
+    margin-right: 3em;
+}
 // Video
 
 .owl-video-wrapper .item-overlay {
