--- a/css/cagov.core.css
+++ b/css/cagov.core.css
@@ -20682,6 +20682,14 @@ div[data-state="open"] .title {
   margin-right: 3em;
 }
 
+.owl-carousel:hover .owl-nav button.owl-prev:focus {
+  margin-left: 0;
+}
+
+.owl-carousel:hover .owl-nav button.owl-next:focus {
+  margin-right: 0;
+}
+
 .owl-video-wrapper .item-overlay {
   display: none;
 }
