--- a/source/scss/cagov/utility-header.scss
+++ b/source/scss/cagov/utility-header.scss
@@ -198,7 +198,7 @@
             }
 
             button {
-                margin: -5px 4px 0 4px;
+                margin: 0 4px 0 4px;
             }
         }
     }
