--- a/source/scss/cagov/carousel.scss
+++ b/source/scss/cagov/carousel.scss
@@ -621,6 +621,25 @@
     @include outline(2px);
 }
 
+
+.owl-carousel .owl-nav button.owl-prev:focus {
+    margin-left: 3em;
+}
+
+
+.owl-carousel .owl-nav button.owl-next:focus {
+    margin-right: 3em;
+}
+
+.owl-carousel:hover .owl-nav button.owl-prev:focus {
+    margin-left: 0;
+}
+
+.owl-carousel:hover .owl-nav button.owl-next:focus {
+    margin-right: 0;
+}
+
+
 // Video
 
 .owl-video-wrapper .item-overlay {
